<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.noonpay.sample.samsungPay.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TableLayout
        android:id="@+id/order_details_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/left_padding"
        android:paddingStart="@dimen/left_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/order_no"
                android:textSize="@dimen/tablerow_textsize" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/item_no"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="bottom"
                    android:padding="@dimen/padding"
                    android:text="@string/product_name"
                    android:textAlignment="viewEnd"
                    android:textColor="#003366"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:gravity="bottom"
                android:text="@string/product_price"
                android:textSize="@dimen/tablerow_textsize" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="bottom"
                    android:inputType="number"
                    android:labelFor="@+id/price"
                    android:maxLength="7"
                    android:textAlignment="viewEnd" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:gravity="bottom"
                android:text="@string/tax_amount"
                android:textSize="@dimen/tablerow_textsize" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tax"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="bottom"
                    android:maxLength="7"
                    android:text="@string/tax"
                    android:textAlignment="viewEnd" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:gravity="bottom"
                android:text="@string/shipping_amount"
                android:textSize="@dimen/tablerow_textsize" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/shipping_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="bottom"
                    android:maxLength="7"
                    android:text="@string/shippingCost"
                    android:textAlignment="viewEnd" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/amount"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:focusable="false"
                    android:gravity="bottom"
                    android:text="@string/total_amount"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_weight="2"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_button" />

    <Button
        android:id="@+id/pay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="OnPay_Click"
        android:text="@string/pay_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_details_table" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>
